--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,7 +14,7 @@
     <string name="menu_share">Share</string>
     <string name="menu_send">Send</string>
     <string name="menu_profile">Profile</string>
-    <string name="menu_wishList">Wishlist</string>
+    <string name="menu_wishList">Wish List</string>
     <string name="menu_career_test">Career Test</string>
     <string name="menu_jobList">Job List</string>
     <string name="menu_settings">Settings</string>
