--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,7 +24,7 @@
     <string name="log_out">Log Out</string>
 
 
-
+    <!--by YeuHarn -->
     <string name="username">Username</string>
     <string name="enter_username">Enter username</string>
     <string name="password">Password</string>
@@ -37,6 +37,17 @@
     <string name="take_test">Take a Career Test</string>
     <string name="test_result">Career Test Result</string>
 
+    <!--career questionnaire items by YeuHarn-->
+    <string-array name="questions">
+        <item>abc</item>
+        <item>def</item>
+    </string-array>
+
+    <string-array name="answers">
+        <item>interesting</item>
+        <item>very interesting</item>
+    </string-array>
+    
     <!--by wenz11-->
     <string name="sign_in">Sign In</string>
     <string name="sign_out">Sign Out</string>
