Change Navigation Drawer to Constraint Layout and Added Logout Button and Comment out the Splash Screen for designing purpose + Added Roboto.tff Font Family (feel free to use the Roboto medium that is added to the project)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -58,6 +58,7 @@
     <string name="next">Next</string>
     <string name="help4u_logo">Help4U Logo</string>
     <string name="test">Test</string>
+    <string name="logout">Logout</string>
 
     <string-array name="Joblist">
         <item>IT</item>
