Added Career Test Result activity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,7 +23,6 @@
     <string name="job_list">Job List</string>
     <string name="log_out">Log Out</string>
 
-
     <!--by YeuHarn -->
     <string name="username">Username</string>
     <string name="enter_username">Enter username</string>
@@ -36,6 +35,10 @@
     <string name="sign_up">Sign Up</string>
     <string name="take_test">Take a Career Test</string>
     <string name="test_result">Career Test Result</string>
+
+    <!-- career test result activity by YeuHarn -->
+    <string name="more_job">More Job</string>
+    <string name="recommended_job">Recommended Job</string>
 
     <!--career questionnaire items by YeuHarn-->
     <string name="question_label">Question</string>
@@ -81,7 +84,6 @@
     <string name="help4u_logo">Help4U Logo</string>
     <string name="test">Test</string>
     <string name="logout">Logout</string>
-
 
     <string-array name="Joblist">
         <item>IT</item>
