--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -120,6 +120,8 @@
     <string name="about_us_full">A social/community mobile application developed by Ang Zuan Wen, Lim Yeu Harn, and Chong Jia Yi.
         This application is to solve  1 of the united nations’ sustainable development goals (which is unemployment).
         The goal of the application is to help user able to find their suitable work environment and occupations.</string>
+    <string name="apply_for_job">Enquires Details about this job</string>
+    <string name="company_email">Company Email</string>
 
 
 </resources>
