--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -118,5 +118,7 @@
     <string name="about_us_full">A social/community mobile application developed by Ang Zuan Wen, Lim Yeu Harn, and Chong Jia Yi.
         This application is to solve  1 of the united nations’ sustainable development goals (which is unemployment).
         The goal of the application is to help user able to find their suitable work environment and occupations.</string>
+    <string name="google_sign_up">Google Sign Up</string>
+    <string name="google_sign_in">Google Sign In</string>
 
 </resources>
