--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,27 +1,21 @@
 <resources>
-    <string name="app_name">Help4U</string>
+    <string name="app_name" translatable="false">Help4U</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
-    <string name="nav_header_title">Android Studio</string>
-    <string name="nav_header_subtitle">android.studio@android.com</string>
-    <string name="nav_header_desc">Navigation header</string>
+    <string name="nav_header_title" translatable="false">Android Studio</string>
+    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
+    <string name="nav_header_desc" translatable="false">Navigation header</string>
     <string name="action_settings">Settings</string>
 
     <string name="menu_home">Home</string>
-    <string name="menu_gallery">Gallery</string>
-    <string name="menu_slideshow">Slideshow</string>
     <string name="menu_tools">Tools</string>
-    <string name="menu_share">Share</string>
     <string name="menu_send">Send</string>
     <string name="menu_profile">Profile</string>
     <string name="menu_wishList">Wish List</string>
     <string name="menu_career_test">Career Test</string>
     <string name="menu_jobList">Job List</string>
-    <string name="menu_settings">Settings</string>
     <string name="menu_about_us">About Us</string>
-    <string name="career_test">Career Test</string>
     <string name="job_list">Job List</string>
-    <string name="log_out">Log Out</string>
 
     <!--by YeuHarn -->
     <string name="username">Username</string>
@@ -96,13 +90,13 @@
     <string name="welcome_msg">Welcome To Help4U</string>
     <string name="login">Login</string>
     <string name="next">Next</string>
-    <string name="help4u_logo">Help4U Logo</string>
-    <string name="test">Test</string>
+    <string name="help4u_logo" translatable="false">Help4U Logo</string>
+    <string name="test" translatable="false">Test</string>
     <string name="logout">Logout</string>
-    <string name="job">test</string>
-    <string name="jobSmallDesc">test2</string>
-    <string name="fullDesc">test1</string>
-    <string name="smallDesc">test</string>
+    <string name="job" translatable="false">test</string>
+    <string name="jobSmallDesc" translatable="false">test2</string>
+    <string name="fullDesc" translatable="false">test1</string>
+    <string name="smallDesc" translatable="false">test</string>
     <string name="set_reminder">Set Reminder</string>
     <string name="navigation">direction</string>
     <string name="compName">Company Name</string>
@@ -117,13 +111,10 @@
     <string name="title_activity_navigation">Map</string>
     <string name="job_description">Job Description</string>
     <string name="salary">Salary:</string>
-    <string name="salaryAmount">RM 1000</string>
+    <string name="salaryAmount" translatable="false">RM 1000</string>
     <string name="companyAddress">Company Address</string>
     <string name="address">Address</string>
-    <string name="about_us_full">A social/community mobile application developed by Ang Zuan Wen, Lim Yeu Harn, and Chong Jia Yi.
-        This application is to solve  1 of the united nations’ sustainable development goals (which is unemployment).
-        The goal of the application is to help user able to find their suitable work environment and occupations.</string>
-    <string name="apply_for_job">Enquires Details about this job</string>
+    <string name="about_us_full">A social/community mobile application developed by Ang Zuan Wen, Lim Yeu Harn, and Chong Jia Yi.         This application is to solve  1 of the united nations’ sustainable development goals (which is unemployment).         The goal of the application is to help user able to find their suitable work environment and occupations.</string>
     <string name="company_email">Company Email</string>
 
     <!-- Setting element by YeuHarn -->
@@ -131,5 +122,10 @@
     <string name="no">No</string>
     <string name="yes">Yes</string>
     <string name="clear_test_result_message">Are you sure you want to clear test result?</string>
+    <string name="apply_for_job">Enquires Details about this job</string>
+    <string name="test_result_cleared">Test Result cleared</string>
+    <string name="career_test_question">Career Test Question</string>
+    <string name="qualification">Qualification</string>
+    <string name="job_detail">Job Details</string>
 
 </resources>
