Fix Login, Register and User Profile Screen to support different screen size

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,7 +21,7 @@
     <string name="menu_about_us">About Us</string>
     <string name="career_test">Career Test</string>
     <string name="job_list">Job List</string>
-    <string name="log_out">Log Out</string>
+    <string name="log_out">Logout</string>
 
     <!--by YeuHarn -->
     <string name="username">Username</string>
