Change the "Cancel" to "Quit" in Login Activity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -146,5 +146,6 @@
     <string name="career_test_question">Career Test Question</string>
     <string name="qualification">Qualification</string>
     <string name="job_detail">Job Details</string>
+    <string name="quit">quit</string>
 
 </resources>
