--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -147,5 +147,7 @@
     <string name="qualification">Qualification</string>
     <string name="job_detail">Job Details</string>
     <string name="quit">quit</string>
+    <string name="job_wishlist">Job Wishlist</string>
+    <string name="add_to_wishlist">Add to Wishlist</string>
 
 </resources>
