--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -165,4 +165,7 @@
     <string name="save_profile">更新个人档案</string>
     <string name="user_profile">用户个人档案</string>
     <string name="user_profile_background">用户个人档案背景</string>
+    <string name="job_title">工作标题</string>
+    <string name="log_out">登出</string>
+    <string name="job_wishlist">心愿单</string>
 </resources>
